--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: JSON Schema implementation in Dart
 homepage: https://github.com/workiva/json_schema
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  collection: ^1.14.6
+  collection: ^1.15.0-nullsafety.4
   http: "^0.13.4"
   logging: '>=0.9.3 <2.0.0'
   rfc_6901: ^0.1.0
