--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: json_schema
-version: 4.0.2
-description: JSON Schema implementation in Dart
+name: json_schema3
+version: 1.0.0
+description: JSON Schema implementation in Dart. Fork of json_schema with sound null safety.
 homepage: https://github.com/workiva/json_schema
 
 environment:
