--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  collection: ^1.15.0-nullsafety.4
+  collection: ^1.15.0
   http: "^0.13.4"
   logging: '>=0.9.3 <2.0.0'
   rfc_6901: ^0.1.0
