--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: json_schema3
 version: 1.0.0
 description: JSON Schema implementation in Dart. Fork of json_schema with sound null safety.
-homepage: https://github.com/workiva/json_schema
+homepage: https://github.com/namib-project/json_schema
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
