--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   collection: ^1.14.6
   http: ">=0.12.0 <0.14.0"
-  logging: '>=0.9.3 <2.0.0'
+  logging: ^1.0.0
   rfc_6901: ^0.1.0
   uri: '>=0.11.1 <2.0.0'
 
