--- a/.github/workflows/dart_ci.yaml
+++ b/.github/workflows/dart_ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [ 2.18.7, stable ]
+        sdk: [ stable ]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
