--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,15 @@ environment:
 
 dependencies:
   collection: ^1.14.6
-  http: ">=0.12.0 <0.14.0"
+  http: ^0.13.0
   logging: ^1.0.0
   rfc_6901: ^0.1.0
   uri: '>=0.11.1 <2.0.0'
 
 dev_dependencies:
   dependency_validator: ^3.1.2
-  path: ^1.3.0
-  shelf: ^0.7.9
-  shelf_static: ^0.2.9
-  test: ^1.9.1
+  path: ^1.8.0
+  shelf: ^1.0.0
+  shelf_static: ^1.0.0
+  test: ^1.17.0
   workiva_analysis_options: ^1.2.2
