--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: json_schema
-version: 4.0.4
+version: 5.0.0-rc1
 description: JSON Schema implementation in Dart
 homepage: https://github.com/workiva/json_schema
 
